First commited as before_68522_rev3