@@ -789,7 +789,9 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 
 		details = new DetailsContentViewer(content, SWT.BORDER | SWT.FLAT);
 		details.setVisible(toggleStatusLineAction.isChecked());
-		details.setContentProvider(new NullContentProvider());
+		details.setContentProvider(new IContentProvider() {
+			// intentionally empty
+		});
 		details.setLabelProvider(getDetailsLabelProvider());
 
 		applyDialogFont(content);
@@ -846,7 +848,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 					.setInput(NLS
 							.bind(
 									WorkbenchMessages.FilteredItemsSelectionDialog_nItemsSelected,
-									new Integer(selection.size())));
+									Integer.valueOf(selection.size())));
 			break;
 		}
 
@@ -1925,8 +1927,7 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 							WorkbenchMessages.FilteredItemsSelectionDialog_taskProgressMessage,
 							new Object[] {
 									message,
-									new Integer(
-											(int) ((worked * 100) / totalWork)) });
+									Integer.valueOf((int) ((worked * 100) / totalWork)) });
 
 		}
 
@@ -2954,21 +2955,6 @@ public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog
 			// currently filters are only added when dialog is restored
 			// if it is changed, refreshing the whole TableViewer should be
 			// added
-		}
-
-	}
-
-	/**
-	 * A content provider that does nothing.
-	 */
-	private class NullContentProvider implements IContentProvider {
-
-		@Override
-		public void dispose() {
-		}
-
-		@Override
-		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
